Removed dates from single project pages and moved award icon

--- a/project_pages/24HourStartup.html
+++ b/project_pages/24HourStartup.html
@@ -53,7 +53,7 @@
                 <h1 class="pageTitle">My projects</h1>
             </div>
             <div class="Group">
-                <p class="lead"><i class="fa fa-trophy"></i> 2014: 24 Hour Startup</p>
+                <p class="lead">24 Hour Startup</p>
                 <div class="row">
                     <div class="col-md-9">
                         <ul>
