--- a/project_pages/EgyptSimulator.html
+++ b/project_pages/EgyptSimulator.html
@@ -54,7 +54,7 @@
             </div>
 
             <div class="Group">
-                <p class="lead">2015: Egypt Simulator</p>
+                <p class="lead">Egypt Simulator</p>
                 <ul>
                     <li class="text">I built a very limited simulator of Egypt to mock the current political situation</li>
                     <li class="text">The simulator, while having some substance and accuracy, is highly satirical!</li>
