--- a/project_pages/Firestrike.html
+++ b/project_pages/Firestrike.html
@@ -54,7 +54,7 @@
             </div>
 
             <div class="Group">
-                <p class="lead">2014: Nerf Firestrike SolidWorks Assembly</p>
+                <p class="lead">Nerf Firestrike SolidWorks Assembly</p>
                 <ul>
                     <li class="text">I made most of the parts of the Firestrike using SolidWorks</li>
                     <li class="text">I took the parts and assembled them together using SolidWorks</li>
