--- a/project_pages/MathTester.html
+++ b/project_pages/MathTester.html
@@ -54,7 +54,7 @@
             </div>
 
             <div class="Group">
-                <p class="lead">2014: Math Tester</p>
+                <p class="lead">Math Tester</p>
                 <ul>
                     <li class="text">Built a math quiz console application using C++</li>
                     <li class="text">The quiz keeps track of progress during a session</li>
