--- a/project_pages/MyoRunaway.html
+++ b/project_pages/MyoRunaway.html
@@ -54,7 +54,7 @@
             </div>
 
             <div class="Group">
-                <p class="lead"><i class="fa fa-trophy"></i> 2014: Myo Runaway</p>
+                <p class="lead">Myo Runaway</p>
                 <div class="row">
                     <div class="col-md-10">
                         <ul>
