--- a/project_pages/NerfWeaponRandomizer.html
+++ b/project_pages/NerfWeaponRandomizer.html
@@ -54,7 +54,7 @@
             </div>
 
             <div class="Group">
-                <p class="lead">2014: Nerf Weapon Randomizer</p>
+                <p class="lead">Nerf Weapon Randomizer</p>
                 <ul>
                     <li class="text">Built a console application with versions in both C++ and Python</li>
                     <li class="text">The application provides the user with a list of random Nerf weapons that are pre-defined for a user-provided number of players</li>
