--- a/project_pages/SisiFighter.html
+++ b/project_pages/SisiFighter.html
@@ -54,7 +54,7 @@
             </div>
 
             <div class="Group">
-                <p class="lead">2015: Sisi Fighter</p>
+                <p class="lead">Sisi Fighter</p>
                 <ul>
                     <li class="text">A battle game where you, as the player, battle Egypt's leader Abdel Fattah el-Sisi</li>
                     <li class="text">The game loosely follows the style of a pokemon battle, but with the battle ongoing for 10 incarnations of Sisi</li>
