--- a/project_pages/SmileyNoMore.html
+++ b/project_pages/SmileyNoMore.html
@@ -54,7 +54,7 @@
             </div>
 
             <div class="Group">
-                <p class="lead">2015: Smiley No More</p>
+                <p class="lead">Smiley No More</p>
                 <ul>
                     <li class="text">A FPS game where you try to survive as long as possible and get as high a score as possible</li>
                     <li class="text">The game is 3D and includes animation</li>
