--- a/project_pages/StudySpaceUW.html
+++ b/project_pages/StudySpaceUW.html
@@ -54,7 +54,7 @@
             </div>
 
             <div class="Group">
-                <p class="lead">2015: StudySpaceUW</p>
+                <p class="lead">StudySpaceUW</p>
                 <ul>
                     <li class="text">For this project, I created a website where University of Waterloo students can find out which classrooms on campus are not being used for classes, thus making them possibly available for studying</li>
                     <li class="text">The website was created using HTML, CSS, and the Django framework</li>
