--- a/project_pages/StudyStarter.html
+++ b/project_pages/StudyStarter.html
@@ -54,7 +54,7 @@
             </div>
 
             <div class="Group">
-                <p class="lead">2015: StudyStarter</p>
+                <p class="lead">StudyStarter</p>
                 <ul>
                     <li class="text">For this project, my team and I created a website where researchers could post studies they wanted to undertake and the public could view these studies, filter through them, and find the necessary information they needed</li>
                     <li class="text">People looking to participate in a study could also have an email sent to them with all of the important details of the study</li>
