--- a/project_pages/TerminalTicTacToe.html
+++ b/project_pages/TerminalTicTacToe.html
@@ -54,7 +54,7 @@
             </div>
 
             <div class="Group">
-                <p class="lead">2014: Terminal TicTacToe</p>
+                <p class="lead">Terminal TicTacToe</p>
                 <ul>
                     <li class="text">I built the game TicTacToe to be played in the terminal</li>
                     <li class="text">The game can be played against a friend or a computer</li>
