--- a/projects.html
+++ b/projects.html
@@ -158,7 +158,7 @@
                     </div> <!-- cd-timeline-img -->
 
                     <div class="cd-timeline-content">
-                        <h2>24 Hour Startup</h2>
+                        <h2><i class="fa fa-trophy"></i> 24 Hour Startup</h2>
                         <p>In 24 hours, founded the start-up company Citivate and created a partially working website and mobile application</p>
                         <a href="project_pages/24HourStartup" class="cd-read-more">Read more</a>
                         <span class="cd-date">November 2014</span>
@@ -171,7 +171,7 @@
                     </div> <!-- cd-timeline-img -->
 
                     <div class="cd-timeline-content">
-                        <h2>Myo Runaway</h2>
+                        <h2><i class="fa fa-trophy"></i> Myo Runaway</h2>
                         <p>Created a Waterloo-themed version of the popular game Temple Run to be played in the browser, and created a script allowing the game to be played using the Myo armband.</p>
                         <a href="project_pages/MyoRunaway" class="cd-read-more">Read more</a>
                         <span class="cd-date">November 2014</span>
