Restructured and restyled home page

--- a/index.html
+++ b/index.html
@@ -49,6 +49,27 @@
 
         <!-- Begin page content -->
         <div class="container">
+            <div class="home">
+                <div class="home-picture">
+                    <img src="images/profile.png" alt="My picture" class="profile-pic"/>
+                </div>
+
+                <div class="titleContainer">
+                    <h1 class="pageTitle">Mohamed Moussa</h1>
+                </div>
+
+                <div class="home-tags">
+                    <p>Systems Design Engineer</p>
+                    <br>
+                    <p>Software Developer</p>
+                    <br>
+                    <p>Entrepreneur</p>
+                    <br>
+                    <p><a href="files/Resume.pdf">Resume</a></p>
+                </div>
+            </div>
+       </div>     
+<!--
             <div class="home-page-text">
                 <div class="home-title">
                     <img src="images/profile.png" alt="My picture" class="profile-pic"/>
@@ -65,6 +86,7 @@
                     </div>
                 </section>
             </div>
+-->
         </div>
 
         <footer class="footer">
