Improved project title size for optimal mobile viewing

--- a/projects.html
+++ b/projects.html
@@ -67,7 +67,7 @@
                     </div> <!-- cd-timeline-img -->
 
                     <div class="cd-timeline-content">
-                        <h2>StudySpaceUW</h2>
+                        <h3>StudySpaceUW</h3>
                         <p>A website for finding empty classes to study in.</p>
                         <a href="project_pages/StudySpaceUW" class="cd-read-more">Read more</a>
                         <span class="cd-date">March 2015</span>
@@ -80,7 +80,7 @@
                     </div> <!-- cd-timeline-img -->
 
                     <div class="cd-timeline-content">
-                        <h2>StudyStarter</h2>
+                        <h3>StudyStarter</h3>
                         <p>A website for finding and advertising research studies.</p>
                         <a href="project_pages/StudyStarter" class="cd-read-more">Read more</a>
                         <span class="cd-date">February 2015</span>
@@ -93,7 +93,7 @@
                     </div> <!-- cd-timeline-img -->
 
                     <div class="cd-timeline-content">
-                        <h2>Smiley No More</h2>
+                        <h3>Smiley No More</h3>
                         <p>A FPS game in which you try to survive as long as possible.</p>
                         <a href="project_pages/SmileyNoMore" class="cd-read-more">Read more</a>
                         <span class="cd-date">January 2015</span>
@@ -106,7 +106,7 @@
                     </div> <!-- cd-timeline-img -->
 
                     <div class="cd-timeline-content">
-                        <h2>Sisi Fighter</h2>
+                        <h3>Sisi Fighter</h3>
                         <p>A satirical game where you have a Pokemon-style battle with Egypt's current leader.</p>
                         <a href="project_pages/SisiFighter" class="cd-read-more">Read more</a>
                         <span class="cd-date">December 2014</span>
@@ -119,7 +119,7 @@
                     </div> <!-- cd-timeline-img -->
 
                     <div class="cd-timeline-content">
-                        <h2>Egypt Simulator</h2>
+                        <h3>Egypt Simulator</h3>
                         <p>A simplified satirical simulator of Egypt.</p>
                         <a href="project_pages/EgyptSimulator" class="cd-read-more">Read more</a>
                         <span class="cd-date">December 2014</span>
@@ -132,7 +132,7 @@
                     </div> <!-- cd-timeline-img -->
 
                     <div class="cd-timeline-content">
-                        <h2>Terminal TicTacToe</h2>
+                        <h3>Terminal TicTacToe</h3>
                         <p>TicTacToe to be played in the command line or terminal against another person or an AI.</p>
                         <a href="project_pages/TerminalTicTacToe" class="cd-read-more">Read more</a>
                         <span class="cd-date">December 2014</span>
@@ -145,7 +145,7 @@
                     </div> <!-- cd-timeline-img -->
 
                     <div class="cd-timeline-content">
-                        <h2>Nerf Firestrike SolidWorks Assembly</h2>
+                        <h3>Nerf Firestrike SolidWorks Assembly</h3>
                         <p>A model of the Nerf Firestrike, created in SolidWorks.</p>
                         <a href="project_pages/Firestrike" class="cd-read-more">Read more</a>
                         <span class="cd-date">November 2014</span>
@@ -158,7 +158,7 @@
                     </div> <!-- cd-timeline-img -->
 
                     <div class="cd-timeline-content">
-                        <h2><i class="fa fa-trophy"></i> 24 Hour Startup</h2>
+                        <h3><i class="fa fa-trophy"></i> 24 Hour Startup</h3>
                         <p>In 24 hours, founded the start-up company Citivate and created a partially working website and mobile application</p>
                         <a href="project_pages/24HourStartup" class="cd-read-more">Read more</a>
                         <span class="cd-date">November 2014</span>
@@ -171,7 +171,7 @@
                     </div> <!-- cd-timeline-img -->
 
                     <div class="cd-timeline-content">
-                        <h2><i class="fa fa-trophy"></i> Myo Runaway</h2>
+                        <h3><i class="fa fa-trophy"></i> Myo Runaway</h3>
                         <p>Created a Waterloo-themed version of the popular game Temple Run to be played in the browser, and created a script allowing the game to be played using the Myo armband.</p>
                         <a href="project_pages/MyoRunaway" class="cd-read-more">Read more</a>
                         <span class="cd-date">November 2014</span>
@@ -184,7 +184,7 @@
                     </div> <!-- cd-timeline-img -->
 
                     <div class="cd-timeline-content">
-                        <h2>Math Tester</h2>
+                        <h3>Math Tester</h3>
                         <p>Created a console application to give simple math quizzes and track quiz statistics.</p>
                         <a href="project_pages/MathTester" class="cd-read-more">Read more</a>
                         <span class="cd-date">October 2014</span>
@@ -197,7 +197,7 @@
                     </div> <!-- cd-timeline-img -->
 
                     <div class="cd-timeline-content">
-                        <h2>Nerf Weapon Randomizer</h2>
+                        <h3>Nerf Weapon Randomizer</h3>
                         <p>A console application that assigned every player a random Nerf gun to use in gameplay, based on Nerf guns available.</p>
                         <a href="project_pages/NerfWeaponRandomizer" class="cd-read-more">Read more</a>
                         <span class="cd-date">May 2014</span>
@@ -210,8 +210,8 @@
                     </div> <!-- cd-timeline-img -->
 
                     <div class="cd-timeline-content">
-                        <h2>Began coding.</h2>
-                        <p>This is when I began coding and developed my passion for software development, which has been the drive behind most of these projects!</p>
+                        <h3>Began coding</h3>
+                        <p>This is when I began coding and developed my passion for software development, which has been the drive behind most of these projects.</p>
                         <span class="cd-date">2013</span>
                     </div> <!-- cd-timeline-content -->
                 </div> <!-- cd-timeline-block -->
