--- a/projects.html
+++ b/projects.html
@@ -62,6 +62,32 @@
 
             <section id="cd-timeline" class="cd-container">
                 <div class="cd-timeline-block">
+                    <div class="cd-timeline-img cd-terminal">
+                        <i class="fa fa-terminal timeline-fa"></i>
+                    </div> <!-- cd-timeline-img -->
+
+                    <div class="cd-timeline-content">
+                        <h3>Custom eNews</h3>
+                        <p>An email notification system for news from CBC that I'm interested in.</p>
+                        <a href="project_pages/CustomENews" class="cd-read-more">Read more</a>
+                        <span class="cd-date">April 2015</span>
+                    </div> <!-- cd-timeline-content -->
+                </div> <!-- cd-timeline-block -->
+
+                <div class="cd-timeline-block">
+                    <div class="cd-timeline-img cd-desktop">
+                        <i class="fa fa-desktop timeline-fa"></i>
+                    </div> <!-- cd-timeline-img -->
+
+                    <div class="cd-timeline-content">
+                        <h3>Signup Block</h3>
+                        <p>A Chrome extension and Firefox add-on for removing signup modals as well as revealing some hidden site content</p>
+                        <a href="project_pages/SignupBlock" class="cd-read-more">Read more</a>
+                        <span class="cd-date">March 2015</span>
+                    </div> <!-- cd-timeline-content -->
+                </div> <!-- cd-timeline-block -->
+
+                <div class="cd-timeline-block">
                     <div class="cd-timeline-img cd-desktop">
                         <i class="fa fa-desktop timeline-fa"></i>
                     </div> <!-- cd-timeline-img -->
@@ -106,22 +132,9 @@
                     </div> <!-- cd-timeline-img -->
 
                     <div class="cd-timeline-content">
-                        <h3>Sisi Fighter</h3>
-                        <p>A satirical game where you have a Pokemon-style battle with Egypt's current leader.</p>
-                        <a href="project_pages/SisiFighter" class="cd-read-more">Read more</a>
-                        <span class="cd-date">December 2014</span>
-                    </div> <!-- cd-timeline-content -->
-                </div> <!-- cd-timeline-block -->
-
-                <div class="cd-timeline-block">
-                    <div class="cd-timeline-img cd-terminal">
-                        <i class="fa fa-terminal timeline-fa"></i>
-                    </div> <!-- cd-timeline-img -->
-
-                    <div class="cd-timeline-content">
-                        <h3>Egypt Simulator</h3>
-                        <p>A simplified satirical simulator of Egypt.</p>
-                        <a href="project_pages/EgyptSimulator" class="cd-read-more">Read more</a>
+                        <h3>Satirical Egypt Applications</h3>
+                        <p>A satirical game where you have a Pokemon-style battle with Egypt's current leader, as well as a satirical simulation of Egypt.</p>
+                        <a href="project_pages/egyptSatire" class="cd-read-more">Read more</a>
                         <span class="cd-date">December 2014</span>
                     </div> <!-- cd-timeline-content -->
                 </div> <!-- cd-timeline-block -->
