--- a/project_pages/SignupBlock.html
+++ b/project_pages/SignupBlock.html
@@ -54,17 +54,8 @@
             </div>
 
             <div class="Group">
-                <p class="lead">Sisi Fighter</p>
-                <ul>
-                    <li class="text">A battle game where you, as the player, battle Egypt's leader Abdel Fattah el-Sisi</li>
-                    <li class="text">The game loosely follows the style of a pokemon battle, but with the battle ongoing for 10 incarnations of Sisi</li>
-                    <li class="text">Both the player and Sisi have different moves they can use, and each has associated probabilities</li>
-                    <li class="text">The game, while having some substance and accuracy, is highly satirical!</li>
-                    <li class="text">This game is made using python, with use of Tkinter for the GUI</li>
-                    <li class="text">Check out the code <a href="https://github.com/mmmoussa/Sisi-Fighter">here</a></li>
-                    <li class="text">Download the game for Mac <a href="../files/Sisi Fighter.zip">here</a></li>
-                    <li class="text">Download the game for Windows <a href="../files/Sisi Fighter Windows.zip">here</a></li>
-                </ul>
+                <p class="lead">Signup Block</p>
+                <p>Currently in development. Please check back soon!</p>
             </div>
         </div>
 
