Updated two projects and fixed bug for nav of tablets

--- a/project_pages/CustomENews.html
+++ b/project_pages/CustomENews.html
@@ -55,7 +55,13 @@
 
             <div class="Group">
                 <p class="lead">Custom eNews</p>
-                <p>Currently in development. Please check back soon!</p>
+                <ul>
+                    <li class="text">A script for keeping up to date with the latest news from CBC.ca that interests you</li>
+                    <li class="text">The script parses CBC's RSS feeds, searching to see if any words from a list you've made are making headlines, and if any are, you are sent an email using the <a href="https://sendgrid.com">SendGrid</a> API</li>
+                    <li class="text">This project can be set up with a cronjob on a server so that you are always up-to-date on what matters to you most</li>
+                    <li class="text">This project contains documentation for setting it up on a <a href="https://www.qnap.com/i/useng/">QNAP NAS</a> server</li>
+                    <li class="text">View the project <a href="https://github.com/mmmoussa/Custom-eNews">here</a></li>
+                </ul>
             </div>
         </div>
 
