--- a/project_pages/SignupBlock.html
+++ b/project_pages/SignupBlock.html
@@ -55,7 +55,42 @@
 
             <div class="Group">
                 <p class="lead">Signup Block</p>
-                <p>Currently in development. Please check back soon!</p>
+                <ul>
+                    <li class="text">A <a href="https://addons.mozilla.org/en-us/firefox/addon/signup-block/">Firefox add-on</a> and <a href="https://chrome.google.com/webstore/detail/signup-block/joiaigcocfbhjbgeajdmmgchlbepelco">Chrome extension</a> for removing signup boxes</li>
+                    <li class="text">Currently has about 70 users between both platforms</li>
+                    <li class="text">Created with one partner at Western Hacks 2015, but afterwards worked on individually</li>
+                </ul>
+                <div id="signup-carousel" class="carousel slide" data-ride="carousel">
+                    <!-- Indicators -->
+                    <ol class="carousel-indicators">
+                        <li data-target="#signup-carousel" data-slide-to="0" class="active"></li>
+                        <li data-target="#signup-carousel" data-slide-to="1"></li>
+                        <li data-target="#signup-carousel" data-slide-to="2"></li>
+                    </ol>
+
+                    <!-- Wrapper for slides -->
+                    <div class="carousel-inner" role="listbox">
+                        <div class="item active">
+                            <img src="../images/Signup_Block_promotional.JPG" alt="Signup Block promotional tile" class="signup-pic">
+                        </div>
+                        <div class="item">
+                            <img src="../images/Before_Signup_Block.png" alt="Signup Block example use" class="signup-pic">
+                        </div>
+                        <div class="item">
+                            <img src="../images/After_Signup_Block.png" alt="Signup Block example use" class="signup-pic">
+                        </div>
+                    </div>
+
+                    <!-- Controls -->
+                    <a class="left carousel-control" href="#signup-carousel" role="button" data-slide="prev">
+                        <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+                        <span class="sr-only">Previous</span>
+                    </a>
+                    <a class="right carousel-control" href="#signup-carousel" role="button" data-slide="next">
+                        <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+                        <span class="sr-only">Next</span>
+                    </a>
+                </div>
             </div>
         </div>
 
@@ -69,7 +104,7 @@
         ================================================== -->
         <!-- Placed at the end of the document so the pages load faster -->
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-        <script src="dist/js/bootstrap.min.js"></script>
+        <script src="../dist/js/bootstrap.min.js"></script>
         <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
         <script src="assets/js/ie10-viewport-bug-workaround.js"></script>
     </body>
