--- a/project_pages/SignupBlock.html
+++ b/project_pages/SignupBlock.html
@@ -71,7 +71,7 @@
                     <!-- Wrapper for slides -->
                     <div class="carousel-inner" role="listbox">
                         <div class="item active">
-                            <img src="../images/Signup_Block_promotional.JPG" alt="Signup Block promotional tile" class="signup-pic">
+                            <img src="../images/Signup_Block_promotional.jpg" alt="Signup Block promotional tile" class="signup-pic">
                         </div>
                         <div class="item">
                             <img src="../images/Before_Signup_Block.png" alt="Signup Block example use" class="signup-pic">
