Added skills images and redesigned skills page

--- a/skills.html
+++ b/skills.html
@@ -52,45 +52,68 @@
             <div class="titleContainer">
                 <h1 class="pageTitle">My skills</h1> 
             </div>
-            <div class="row center">
-                <div class="col-md-12">
-                    <div class="centerGroup">
-                        <p class="lead">Programming Languages</p>
-                        <div class="row center">
-                            <div class="col-sm-6">
-                                <div class="text">HTML</div>
-                                <div class="text">CSS</div>
-                                <div class="text">Javascript</div>
-                                <div class="text">Swift</div>
-                            </div>
-                            <div class="col-sm-6">
-                                <div class="text">C++</div>
-                                <div class="text">C#</div>
-                                <div class="text">Python</div>
-                                <div class="text">Lua</div>
-                            </div>
-                        </div>
+            
+            <div class="centerGroup">
+                <div class="row">
+                    <h2 class="skill-header">Programming languages</h2>
+                    <div class="col-xs-6 col-sm-3 col-md-2">
+                        <img src="images/skills/html.jpg" class="skill-pic">
                     </div>
-                </div>
-                <div class="col-md-6">
-                    <div class="centerGroup">
-                        <p class="lead">Tools</p>
-                            <div class="text">Xcode</div>
-                            <div class="text">Unity</div>
-                            <div class="text">GitHub</div>
-                            <div class="text">SolidWorks</div>
+                    <div class="col-xs-6 col-sm-3 col-md-2">
+                        <img src="images/skills/css.jpg" class="skill-pic">
                     </div>
-                </div>
-                <div class="col-md-6">
-                    <div class="centerGroup">
-                        <p class="lead">Frameworks</p>
-                            <div class="text">Bootstrap</div>
-                            <div class="text">Tkinter</div>
-                            <div class="text">Django</div>
-                            <div class="text">Flask</div>
+                    <div class="clearfix visible-xs-block"></div>
+                    <div class="col-xs-6 col-sm-3 col-md-2">
+                        <img src="images/skills/js.png" class="skill-pic">
                     </div>
+                    <div class="col-xs-6 col-sm-3 col-md-2">
+                        <img src="images/skills/swift.jpg" class="skill-pic">
+                    </div>
+                    <div class="clearfix visible-xs-block visible-sm-block"></div>
+                    <div class="col-xs-6 col-sm-3 col-sm-offset-3 col-md-2 col-md-offset-0">
+                        <img src="images/skills/python.png" class="skill-pic">
+                    </div>
+                    <div class="col-xs-6 col-sm-3 col-md-2">
+                        <img src="images/skills/cpp.jpg" class="skill-pic">
+                    </div>
+                    <div class="clearfix visible-xs-block visible-sm-block visible-md-block visible-lg-block"></div>
+                    <p class="skill-text">Others include: C#, Lua, MS DOS</p>
                 </div>
-            </div>      
+            </div>
+
+            <div class="centerGroup">
+                <div class="row">
+                    <h2 class="skill-header">Frameworks</h2>
+                    <div class="col-sm-4">
+                        <img src="images/skills/django.jpg" class="skill-pic">
+                    </div>
+                    <div class="col-sm-4">
+                        <img src="images/skills/bottle.jpg" class="skill-pic">
+                    </div>
+                    <div class="col-sm-4">
+                        <img src="images/skills/bootstrap.jpg" class="skill-pic">
+                    </div>
+                    <div class="clearfix visible-xs-block visible-sm-block visible-md-block visible-lg-block"></div>
+                    <p class="skill-text">Others include: TkInter</p>
+                </div>
+            </div>
+
+            <div class="centerGroup">
+                <div class="row">
+                    <h2 class="skill-header">Tools</h2>
+                    <div class="col-sm-4">
+                        <img src="images/skills/github.jpg" class="skill-pic">
+                    </div>
+                    <div class="col-sm-4">
+                        <img src="images/skills/unity.jpg" class="skill-pic">
+                    </div>
+                    <div class="col-sm-4">
+                        <img src="images/skills/xcode.jpg" class="skill-pic">
+                    </div>
+                    <div class="clearfix visible-xs-block visible-sm-block visible-md-block visible-lg-block"></div>
+                    <p class="skill-text">Others include: AWS, APIs</p>
+                </div>
+            </div>     
         </div>
 
         <footer class="footer">
