Updated website design overall  - Changed website style  - Updated profile picture  - Moved resume link to contact page  - Changed background of home page

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     </head>
     <body class="home">
         <!-- Fixed navbar -->
-        <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+        <nav class="navbar navbar-custom navbar-fixed-top" role="navigation">
             <div class="container">
                 <div class="navbar-header">
                     <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
@@ -51,7 +51,7 @@
         <div class="container">
             <div class="home">
                 <div class="home-picture">
-                    <img src="images/profile.png" alt="My picture" class="profile-pic"/>
+                    <img src="images/profile.jpg" alt="My picture" class="profile-pic"/>
                 </div>
 
                 <div class="titleContainer">
@@ -59,35 +59,14 @@
                 </div>
 
                 <div class="home-tags">
-                    <p>Systems Design Engineer</p>
-                    <br>
-                    <p>Software Developer</p>
-                    <br>
-                    <p>Entrepreneur</p>
-                    <br>
-                    <p><a href="files/Resume.pdf">Resume</a></p>
+                    <div class="row">
+                        <div class="col-sm-4"><p>Software Developer</p></div>
+                        <div class="col-sm-4"><p>Systems Design Engineer</p></div>
+                        <div class="col-sm-4"><p>Entrepreneur</p></div>
+                    </div>
                 </div>
             </div>
        </div>     
-<!--
-            <div class="home-page-text">
-                <div class="home-title">
-                    <img src="images/profile.png" alt="My picture" class="profile-pic"/>
-                    <h1 class="pageTitle">About me</h1>
-                </div>
-                <section class="home-section">
-                    <p class="lead">Mohamed Moussa, 1B Systems Design Engineering Student</p>
-                    <div class="home-text">I am a hard-working and motivated individual with excellent time management and communication skills. I dedicate 
-                        myself to self-improvement and am constantly looking for new and challenging problems. My passions are technology and software 
-                        development, and I am frequently learning new languages or working on side projects. I also make sure to make time for athletics 
-                        and having fun. Until recently, I was a national-level springboard and platform diver, twice placing among the top 12 in the 
-                        national finals. When not in class or studying I can often be found participating in hackathons and business events.<br><br>
-                        To learn more about me, check out my <a href="files/Resume.pdf">resume</a>.
-                    </div>
-                </section>
-            </div>
--->
-        </div>
 
         <footer class="footer">
             <div class="container">
