--- a/contact.html
+++ b/contact.html
@@ -27,7 +27,7 @@
     </head>
     <body>
         <!-- Fixed navbar -->
-        <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+        <nav class="navbar navbar-custom navbar-fixed-top" role="navigation">
             <div class="container">
                 <div class="navbar-header">
                     <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
@@ -56,20 +56,33 @@
                 <p class="contact-lead center">Contact or learn more about me through any of the following:</p>
                 <br>
                 <div class="row center">
-                    <div class="col-xs-4 contact-text">
+                    <div class="col-xs-6 col-sm-3 contact-icon">
                         <a href="mailto:mmmoussa@uwaterloo.ca">
                             <i class="fa fa-envelope fa-5x"></i>
                         </a>
+                        <br>
+                        <a href="mailto:mmmoussa@uwaterloo.ca">Email</a>
                     </div>
-                    <div class="col-xs-4">
+                    <div class="col-xs-6 col-sm-3 contact-icon">
                         <a href="https://ca.linkedin.com/pub/mohamed-moussa/a4/bab/8b2/">
                             <i class="fa fa-linkedin-square fa-5x"></i>
                         </a>
+                        <br>
+                        <a href="https://ca.linkedin.com/pub/mohamed-moussa/a4/bab/8b2/">LinkedIn</a>
                     </div>
-                    <div class="col-xs-4">
+                    <div class="col-xs-6 col-sm-3 contact-icon">
                         <a href="https://github.com/mmmoussa">
                             <i class="fa fa-github fa-5x"></i>
                         </a>
+                        <br>
+                        <a href="https://github.com/mmmoussa">GitHub</a>
+                    </div>
+                    <div class="col-xs-6 col-sm-3 contact-icon">
+                        <a href="files/Resume.pdf">
+                            <i class="fa fa-file-text fa-5x"></i>
+                        </a>
+                        <br>
+                        <a href="files/Resume.pdf">Resume</a>
                     </div>
                 </div>
             </div>
