Made name clickable and linked to home page

--- a/contact.html
+++ b/contact.html
@@ -34,7 +34,7 @@
                         <span class="sr-only">Toggle navigation</span>
                         <i class="fa fa-angle-double-down"></i>
                     </button>
-                    <div class="name-text">Mohamed Moussa</div>
+                    <div class="name-text"><a href="index">Mohamed Moussa</a></div>
                 </div>
                 <div id="navbar" class="collapse navbar-collapse navbar-right">
                     <ul class="nav navbar-nav">
