--- a/project_pages/Firestrike.html
+++ b/project_pages/Firestrike.html
@@ -60,10 +60,36 @@ custom<!DOCTYPE html>
                     <li class="text">I took the parts and assembled them together using SolidWorks</li>
                     <li class="text">This project was completed as part of the SYDE 101L Graphics Lab course</li>
                 </ul>
-                <div class="row">
-                    <div class="col-md-4"><img src="../images/Firestrike1.JPG" alt="Firestrike image 1" class="nerf-pic"></div>
-                    <div class="col-md-4"><img src="../images/Firestrike3.JPG" alt="Firestrike image 2" class="nerf-pic"></div>
-                    <div class="col-md-4"><img src="../images/Firestrike2.JPG" alt="Firestrike image 3" class="nerf-pic"></div>
+                <div id="nerf-carousel" class="carousel slide" data-ride="carousel">
+                    <!-- Indicators -->
+                    <ol class="carousel-indicators">
+                        <li data-target="#nerf-carousel" data-slide-to="0" class="active"></li>
+                        <li data-target="#nerf-carousel" data-slide-to="1"></li>
+                        <li data-target="#nerf-carousel" data-slide-to="2"></li>
+                    </ol>
+
+                    <!-- Wrapper for slides -->
+                    <div class="carousel-inner" role="listbox">
+                        <div class="item active">
+                            <img src="../images/Firestrike1.JPG" alt="Firestrike image 1" class="carousel-pic">
+                        </div>
+                        <div class="item">
+                            <img src="../images/Firestrike3.JPG" alt="Firestrike image 2" class="carousel-pic">
+                        </div>
+                        <div class="item">
+                            <img src="../images/Firestrike2.JPG" alt="Firestrike image 3" class="carousel-pic">
+                        </div>
+                    </div>
+
+                    <!-- Controls -->
+                    <a class="left carousel-control" href="#nerf-carousel" role="button" data-slide="prev">
+                        <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+                        <span class="sr-only">Previous</span>
+                    </a>
+                    <a class="right carousel-control" href="#nerf-carousel" role="button" data-slide="next">
+                        <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+                        <span class="sr-only">Next</span>
+                    </a>
                 </div>
             </div>
         </div>
