--- a/project_pages/StudyStarter.html
+++ b/project_pages/StudyStarter.html
@@ -60,12 +60,38 @@ custom<!DOCTYPE html>
                     <li class="text">People looking to participate in a study could also have an email sent to them with all of the important details of the study</li>
                     <li class="text">The website was created using HTML, CSS, and the MEAN stack, and it integrated the <a href="https://www.mailjet.com">mailjet</a> api</li>
                     <li class="text">This project was initiated and executed during the 24-hour-long <a href="http://mchacks.io">McHacks 2015</a> hackathon</li>
-                    <li class="text">This project is not live</li>
+                    <li class="text">This project can be viewed at <a href="http://studystarter.herokuapp.com">studystarter.herokuapp.com</a></li>
                 </ul>
-                <div class="row">
-                    <div class="col-md-4"><img src="../images/studystarter_home.png" alt="StudyStarter Home Page" class="study-pic"></div>
-                    <div class="col-md-4"><img src="../images/studystarter_study.png" alt="StudyStarter Study Page" class="study-pic"></div>
-                    <div class="col-md-4"><img src="../images/studystarter_email.png" alt="StudyStarter Email" class="study-pic"></div>
+                <div id="study-carousel" class="carousel slide" data-ride="carousel">
+                    <!-- Indicators -->
+                    <ol class="carousel-indicators">
+                        <li data-target="#study-carousel" data-slide-to="0" class="active"></li>
+                        <li data-target="#study-carousel" data-slide-to="1"></li>
+                        <li data-target="#study-carousel" data-slide-to="2"></li>
+                    </ol>
+
+                    <!-- Wrapper for slides -->
+                    <div class="carousel-inner" role="listbox">
+                        <div class="item active">
+                            <img src="../images/studystarter_home.png" alt="StudyStarter Home Page" class="carousel-pic">
+                        </div>
+                        <div class="item">
+                            <img src="../images/studystarter_study.png" alt="StudyStarter Study Page" class="carousel-pic">
+                        </div>
+                        <div class="item">
+                            <img src="../images/studystarter_email.png" alt="StudyStarter Email" class="carousel-pic">
+                        </div>
+                    </div>
+
+                    <!-- Controls -->
+                    <a class="left carousel-control" href="#study-carousel" role="button" data-slide="prev">
+                        <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+                        <span class="sr-only">Previous</span>
+                    </a>
+                    <a class="right carousel-control" href="#study-carousel" role="button" data-slide="next">
+                        <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+                        <span class="sr-only">Next</span>
+                    </a>
                 </div>
             </div>
         </div>
