Updated website with new projects and style
- Added Ramadan Hub to projects
- Added Arduino Alarm to projects
- Adjusted colour and styling of headers across website
- Adjusted colour of text on home page

--- a/projects.html
+++ b/projects.html
@@ -12,9 +12,6 @@
         <link href="dist/css/bootstrap.min.css" rel="stylesheet">
 
         <!-- Vertical Timeline resources -->
-
-
-        <link rel="stylesheet" href="css/reset.css"> <!-- CSS reset -->
         <link rel="stylesheet" href="vertical-timeline/css/style.css"> <!-- Resource style -->
         <script src="vertical-timeline/js/modernizr.js"></script> <!-- Modernizr -->
 
@@ -61,6 +58,32 @@
             </div>
 
             <section id="cd-timeline" class="cd-container">
+                <div class="cd-timeline-block">
+                    <div class="cd-timeline-img cd-wrench">
+                        <i class="fa fa-wrench timeline-fa"></i>
+                    </div> <!-- cd-timeline-img -->
+
+                    <div class="cd-timeline-content">
+                        <h3>Arduino Door and Alarm System</h3>
+                        <p>Built a small-scale door with a lock, and hooked it up to an alarm system, all custom-built and using an Arduino Uno.</p>
+                        <a href="project_pages/ArduinoAlarm" class="cd-read-more">Read more</a>
+                        <span class="cd-date">July 2015</span>
+                    </div> <!-- cd-timeline-content -->
+                </div> <!-- cd-timeline-block -->
+
+                <div class="cd-timeline-block">
+                    <div class="cd-timeline-img cd-desktop">
+                        <i class="fa fa-desktop timeline-fa"></i>
+                    </div> <!-- cd-timeline-img -->
+
+                    <div class="cd-timeline-content">
+                        <h3>Ramadan Hub</h3>
+                        <p>A website for all the resources a person would need during Ramadan.</p>
+                        <a href="project_pages/RamadanHub" class="cd-read-more">Read more</a>
+                        <span class="cd-date">June 2015</span>
+                    </div> <!-- cd-timeline-content -->
+                </div> <!-- cd-timeline-block -->
+
                 <div class="cd-timeline-block">
                     <div class="cd-timeline-img cd-terminal">
                         <i class="fa fa-terminal timeline-fa"></i>
@@ -201,19 +224,6 @@
                         <p>Created a console application to give simple math quizzes and track quiz statistics.</p>
                         <a href="project_pages/MathTester" class="cd-read-more">Read more</a>
                         <span class="cd-date">October 2014</span>
-                    </div> <!-- cd-timeline-content -->
-                </div> <!-- cd-timeline-block -->
-
-                <div class="cd-timeline-block">
-                    <div class="cd-timeline-img cd-terminal">
-                        <i class="fa fa-terminal timeline-fa"></i>
-                    </div> <!-- cd-timeline-img -->
-
-                    <div class="cd-timeline-content">
-                        <h3>Nerf Weapon Randomizer</h3>
-                        <p>A console application that assigned every player a random Nerf gun to use in gameplay, based on Nerf guns available.</p>
-                        <a href="project_pages/NerfWeaponRandomizer" class="cd-read-more">Read more</a>
-                        <span class="cd-date">May 2014</span>
                     </div> <!-- cd-timeline-content -->
                 </div> <!-- cd-timeline-block -->
 
