--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                 </div>
 
                 <div class="titleContainer">
-                    <h1 class="pageTitle">Mohamed Moussa</h1>
+                    <h1 class="homePageTitle">Mohamed Moussa</h1>
                 </div>
 
                 <div class="home-tags">
