Updated user count for signup block

--- a/project_pages/SignupBlock.html
+++ b/project_pages/SignupBlock.html
@@ -57,7 +57,7 @@ custom<!DOCTYPE html>
                 <p class="lead">Signup Block</p>
                 <ul>
                     <li class="text">A <a href="https://addons.mozilla.org/en-us/firefox/addon/signup-block/">Firefox add-on</a> and <a href="https://chrome.google.com/webstore/detail/signup-block/joiaigcocfbhjbgeajdmmgchlbepelco">Chrome extension</a> for removing signup boxes</li>
-                    <li class="text">Currently has about 70 users between both platforms</li>
+                    <li class="text">Currently has around 200 users between both platforms</li>
                     <li class="text">Created with one partner at Western Hacks 2015, but afterwards worked on individually</li>
                 </ul>
                 <div id="signup-carousel" class="carousel slide" data-ride="carousel">
