Small fix of resume link

--- a/index.html
+++ b/index.html
@@ -517,7 +517,7 @@
 				    <a href="https://github.com/mmmoussa">GitHub</a>
 				</div>
 				<div class="col s6 m3 contact-icon">
-				    <a href="files/Resume.pdf">
+				    <a href="Resume.pdf">
 				        <i class="fa fa-file-text fa-5x"></i>
 				    </a>
 				    <br>
