--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 		<div class="row">
 			<div class="col s12 m5 l3">
 				<div class="me-img-container">
-					<img src="images/me2.png" class="me-img circle">
+					<img src="images/me.png" class="me-img circle">
 				</div>
 			</div>
 			<div class="col s12 m7 l9">
@@ -402,7 +402,7 @@
 					<div class="card-reveal">
 					    <span class="card-title grey-text text-darken-4">
 					    <div class="card-detail-title">Ramadan Hub</div><i class="material-icons right top-right-close">close</i></span>
-					    <p>A website where people could go to find resources they'd need to facilitate their fasting during the Muslim month of Ramadan. Had food locations, prayer spaces, full English and Arabic copies of the Quran, and more. Obtained about 900 unique visitors in one month.</p>
+					    <p>A website where people could go to find resources they'd need to facilitate their fasting during the Islamic month of Ramadan. Had food locations, prayer spaces, full English and Arabic copies of the Quran, and more. Obtained about 900 unique visitors in one month.</p>
 					</div>
 				</div>
 			</div>
@@ -418,7 +418,7 @@
 					<div class="card-reveal">
 					    <span class="card-title grey-text text-darken-4">
 					    <div class="card-detail-title">Signup Block</div><i class="material-icons right top-right-close">close</i></span>
-					    <p>A Firefox add-on and Chrome extension for removing signup boxes on websites. Currently has over 250 users.</p>
+					    <p>A Firefox add-on and Chrome extension for removing signup boxes on websites. Currently has over 600 users.</p>
 					</div>
 				</div>
 			</div>
@@ -460,7 +460,7 @@
 					</div>
 					<div class="card-content">
 					    <span class="card-title activator grey-text text-darken-4"><div class="card-main-title">Smiley No More</div><i class="material-icons right top-right-more">more_vert</i></span>
-					    <br>
+					    <p><a href="Smiley_No_More">Play game</a></p>
 					</div>
 					<div class="card-reveal">
 					    <span class="card-title grey-text text-darken-4">
@@ -557,7 +557,6 @@
 			-->
 		</div>
 	</section>
-
 	<script type="text/javascript">
 		$( document ).ready(function(){
 			$(".button-collapse").sideNav({
@@ -615,7 +614,22 @@
         		});
 	        });
 	        $(window).trigger('resize');    
-	      });
+	    });
+
+		$(function() {
+			$('a[href*=#]:not([href=#])').click(function() {
+				if (location.pathname.replace(/^\//,'') == this.pathname.replace(/^\//,'') && location.hostname == this.hostname) {
+					var target = $(this.hash);
+					target = target.length ? target : $('[name=' + this.hash.slice(1) +']');
+					if (target.length) {
+						$('html,body').animate({
+							scrollTop: target.offset().top
+						}, 1300);
+						return false;
+					}
+				}
+			});
+		});
 	</script>
 </body>
 </html>
