Changed website title and added website icon

--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>My site</title>
+	<title>Mohamed Moussa</title>
+	<link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
 	<!-- Compiled and minified CSS -->
