--- a/index.html
+++ b/index.html
@@ -98,20 +98,22 @@
 				</div>
 			</div>
 		</div>
+		<a href="#s2"><i class="material-icons more-arrow">keyboard_arrow_down</i></a>
 	</section>
 
 	<!-- About -->
 	<section class="">
 		<a class="nav-link" name="s2"></a>
 		<div class="row">
+			<h3 class="section-title">About</h3>
 			<div class="col s12 m5 l3">
 				<div class="me-img-container">
-					<img src="images/me.png" class="me-img circle">
+					<img src="images/profile.jpg" class="me-img circle">
 				</div>
 			</div>
 			<div class="col s12 m7 l9">
 				<i class="fa fa-quote-left quote"></i>
-				<p class="quote-text">Yesterday I was clever, so I wanted to change the world. Today I am wise, so I am changing myself.</p><i class="fa fa-quote-right quote right"></i> 
+				<p class="quote-text">Yesterday I was clever, so I wanted to change the world. Today I am wise, so I am changing myself.</p><i class="fa fa-quote-right quote right"></i>
 				<br><br>
 				<p class="quote-author right-align">- Rumi</p>
 			</div>
@@ -122,252 +124,59 @@
 	<section class="">
 		<a class="nav-link" name="s3"></a>
 		<div class="row center">
-			<h3 class="skill-title">Languages</h3>
-			<div class="col s6 m4 l3">
-				<div class="chip orange resize-tag">
-					<span class="">
-						<i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i>
-						Python
-					</span>
+			<h3 class="section-title">Skills</h3>
+			<div class="col s12 m6 l3">
+				<div class="skill-list">
+					<h5>Languages</h5>
+					<ul>
+						<li>Python</li>
+						<li>JavaScript</li>
+						<li>Java</li>
+						<li>C++</li>
+						<li>HTML</li>
+						<li>CSS</li>
+						<li>MS DOS</li>
+					</ul>
 				</div>
 			</div>
-			<div class="col s6 m4 l3">
-				<div class="chip orange resize-tag">
-					<span class="">
-						<i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i>
-						JavaScript
-					</span>
+			<div class="col s12 m6 l3">
+				<div class="skill-list">
+					<h5>Frameworks</h5>
+					<ul>
+						<li>Django</li>
+						<li>Flask</li>
+						<li>React</li>
+						<li>Redux</li>
+						<li>Node.js</li>
+						<li>Bootstrap</li>
+						<li>Materialize</li>
+					</ul>
 				</div>
 			</div>
-			<div class="col s6 m4 l3">
-				<div class="chip orange resize-tag">
-					<span class="">
-						<i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i>
-						C++
-					</span>
+			<div class="col s12 m6 l3">
+				<div class="skill-list">
+					<h5>Tools</h5>
+					<ul>
+						<li>Android Studio</li>
+						<li>Sublime Text</li>
+						<li>Bash</li>
+						<li>Git</li>
+						<li>Parse (RIP)</li>
+						<li>Firebase</li>
+						<li>SQLite</li>
+						<li>Redis</li>
+					</ul>
 				</div>
 			</div>
-			<div class="col s6 m4 l3">
-				<div class="chip orange resize-tag">
-					<span class="">
-						<i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i>
-						Java
-					</span>
-				</div>
-			</div>
-			<div class="col s6 m4 l3">
-				<div class="chip orange resize-tag">
-					<span class="">
-						<i class="fa fa-star"></i>
-						Swift
-					</span>
-				</div>
-			</div>
-			<div class="col s6 m4 l3">
-				<div class="chip orange resize-tag">
-					<span class="">
-						<i class="fa fa-star"></i>
-						Lua
-					</span>
-				</div>
-			</div>
-			<div class="col s6 m4 l3">
-				<div class="chip orange resize-tag">
-					<span class="">
-						<i class="fa fa-star"></i>
-						C#
-					</span>
-				</div>
-			</div>
-			<div class="col s6 m4 l3">
-				<div class="chip orange resize-tag">
-					<span class="">
-						<i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i>
-						HTML
-					</span>
-				</div>
-			</div>
-			<div class="col s6 m4 l3">
-				<div class="chip orange resize-tag">
-					<span class="">
-						<i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i>
-						CSS
-					</span>
-				</div>
-			</div>
-			<div class="col s6 m4 l3">
-				<div class="chip orange resize-tag">
-					<span class="">
-						<i class="fa fa-star"></i><i class="fa fa-star"></i>
-						MS DOS
-					</span>
-				</div>
-			</div>
-			<br class="clearfix">
-
-			<div class="divider"></div>
-
-			<h3 class="skill-title">Frameworks</h3>
-			<div class="col s6 m4 l3">
-				<div class="chip orange resize-tag">
-					<span class="">
-						<i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i>
-						Django
-					</span>
-				</div>
-			</div>
-			<div class="col s6 m4 l3">
-				<div class="chip orange resize-tag">
-					<span class="">
-						<i class="fa fa-star"></i><i class="fa fa-star"></i>
-						Bottle
-					</span>
-				</div>
-			</div>
-			<div class="col s6 m4 l3">
-				<div class="chip orange resize-tag">
-					<span class="">
-						<i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i>
-						Meteor
-					</span>
-				</div>
-			</div>
-			<div class="col s6 m4 l3">
-				<div class="chip orange resize-tag">
-					<span class="">
-						<i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i>
-						Node.js
-					</span>
-				</div>
-			</div>
-			<div class="col s6 m4 l3">
-				<div class="chip orange resize-tag">
-					<span class="">
-						<i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i>
-						jQuery
-					</span>
-				</div>
-			</div>
-			<div class="col s6 m4 l3">
-				<div class="chip orange resize-tag">
-					<span class="">
-						<i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i>
-						Bootstrap
-					</span>
-				</div>
-			</div>
-			<div class="col s6 m4 l3">
-				<div class="chip orange resize-tag">
-					<span class="">
-						<i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i>
-						Materialize CSS
-					</span>
-				</div>
-			</div>
-			<div class="col s6 m4 l3">
-				<div class="chip orange resize-tag">
-					<span class="">
-						<i class="fa fa-star"></i><i class="fa fa-star"></i>
-						TkInter
-					</span>
-				</div>
-			</div>
-			<br class="clearfix">
-
-			<div class="divider"></div>
-
-			<h3 class="skill-title">Hardware</h3>
-			<div class="col s6 m4 l3">
-				<div class="chip orange resize-tag">
-					<span class="">
-						<i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i>
-						Arduino
-					</span>
-				</div>
-			</div>
-			<div class="col s6 m4 l3">
-				<div class="chip orange resize-tag">
-					<span class="">
-						<i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i>
-						Raspberry Pi
-					</span>
-				</div>
-			</div>
-			<div class="col s6 m4 l3">
-				<div class="chip orange resize-tag">
-					<span class="">
-						<i class="fa fa-star"></i><i class="fa fa-star"></i>
-						Leap Motion
-					</span>
-				</div>
-			</div>
-			<div class="col s6 m4 l3">
-				<div class="chip orange resize-tag">
-					<span class="">
-						<i class="fa fa-star"></i><i class="fa fa-star"></i>
-						Myo Armband
-					</span>
-				</div>
-			</div>
-			<br class="clearfix">
-
-			<div class="divider"></div>
-
-			<h3 class="skill-title">Tools</h3>
-			<div class="col s6 m4 l3">
-				<div class="chip orange resize-tag">
-					<span class="">
-						Git
-					</span>
-				</div>
-			</div>
-			<div class="col s6 m4 l3">
-				<div class="chip orange resize-tag">
-					<span class="">
-						GitHub
-					</span>
-				</div>
-			</div>
-			<div class="col s6 m4 l3">
-				<div class="chip orange resize-tag">
-					<span class="">
-						BitBucket
-					</span>
-				</div>
-			</div>
-			<div class="col s6 m4 l3">
-				<div class="chip orange resize-tag">
-					<span class="">
-						Android Studio
-					</span>
-				</div>
-			</div>
-			<div class="col s6 m4 l3">
-				<div class="chip orange resize-tag">
-					<span class="">
-						Xcode
-					</span>
-				</div>
-			</div>
-			<div class="col s6 m4 l3">
-				<div class="chip orange resize-tag">
-					<span class="">
-						Unity
-					</span>
-				</div>
-			</div>
-			<div class="col s6 m4 l3">
-				<div class="chip orange resize-tag">
-					<span class="">
-						AWS
-					</span>
-				</div>
-			</div>
-			<div class="col s6 m4 l3">
-				<div class="chip orange resize-tag">
-					<span class="">
-						Heroku
-					</span>
+			<div class="col s12 m6 l3">
+				<div class="skill-list">
+				<h5>Hardware</h5>
+					<ul>
+						<li>Myo armband</li>
+						<li>Leap Motion</li>
+						<li>Arduino</li>
+						<li>Raspberry Pi</li>
+					</ul>
 				</div>
 			</div>
 		</div>
@@ -377,6 +186,23 @@
 	<section class="">
 		<a class="nav-link" name="s4"></a>
 		<div class="row">
+			<h3 class="section-title">Projects</h3>
+			<div class="col s12 m6 l3">
+				<div class="card">
+					<div class="card-image waves-effect waves-block waves-light">
+					    <img class="activator project-image" src="images/iqra_feature_graphic.png">
+					</div>
+					<div class="card-content">
+					    <span class="card-title activator grey-text text-darken-4"><div class="card-main-title">Iqra</div><i class="material-icons right top-right-more">more_vert</i></span>
+					    <p><a href="https://play.google.com/store/apps/details?id=com.mmmoussa.iqra">Android</a> | <a href="https://iqraapp.com">Web</a></p>
+					</div>
+					<div class="card-reveal">
+					    <span class="card-title grey-text text-darken-4">
+					    <div class="card-detail-title">Iqra</div><i class="material-icons right top-right-close">close</i></span>
+					    <p>I am the founder and lead developer of Iqra, an app for searching the Quran using speech recognition. It currently has 4300+ downloads and a rating of 4.8/5 on the Play store.</p>
+					</div>
+				</div>
+			</div>
 			<div class="col s12 m6 l3">
 				<div class="card">
 					<div class="card-image waves-effect waves-block waves-light">
@@ -436,7 +262,7 @@
 					<div class="card-reveal">
 					    <span class="card-title grey-text text-darken-4">
 					    <div class="card-detail-title">Signup Block</div><i class="material-icons right top-right-close">close</i></span>
-					    <p>A Firefox add-on and Chrome extension for removing signup boxes on websites. Currently has over 600 users.</p>
+					    <p>A Firefox add-on and Chrome extension for removing signup boxes on websites. Currently has over 1300 users.</p>
 					</div>
 				</div>
 			</div>
@@ -487,29 +313,14 @@
 					</div>
 				</div>
 			</div>
-			<div class="col s12 m6 l3">
-				<div class="card">
-					<div class="card-image waves-effect waves-block waves-light">
-					    <img class="activator project-image" src="images/firestrike.JPG">
-					</div>
-					<div class="card-content">
-					    <span class="card-title activator grey-text text-darken-4"><div class="card-main-title">SolidWorks Nerf Gun</div><i class="material-icons right top-right-more">more_vert</i></span>
-					    <br>
-					</div>
-					<div class="card-reveal">
-					    <span class="card-title grey-text text-darken-4">
-					    <div class="card-detail-title">SolidWorks Nerf Gun</div><i class="material-icons right top-right-close">close</i></span>
-					    <p>Created a full model of the Nerf Firestrike using SolidWorks.</p>
-					</div>
-				</div>
-			</div>
 		</div>
 	</section>
 
 	<!-- Contact -->
-	<section class="">
+	<section id="contact-section">
 		<a class="nav-link" name="s5"></a>
 		<div class="container">
+			<h3 class="section-title">Contact</h3>
 			<p class="contact-text">Interested in hiring me? Just want to have a chat? Please contact me through any of the ways below.</p>
 
 			<div class="row center">
@@ -542,37 +353,6 @@
 				    <a href="Resume.pdf">Resume</a>
 				</div>
 			</div>
-
-			<!--
-			<form>
-				<div class="row">
-					<div class="input-field col s6">
-						<i class="material-icons prefix">account_circle</i>
-						<input id="name" type="text" class="validate">
-						<label for="name">Name</label>
-					</div>
-					<div class="input-field col s6">
-						<i class="material-icons prefix">email</i>
-						<input id="email" type="email" class="validate">
-						<label for="email">Email</label>
-					</div>
-				</div>
-				<div class="row">
-					<div class="input-field col s12">
-						<i class="material-icons prefix">mode_edit</i>
-					  	<input id="subject" type="text" class="validate">
-					  	<label for="subject">Subject</label>
-					</div>
-				</div>
-				<div class="row">
-					<div class="input-field col s12">
-						<i class="material-icons prefix">view_headline</i>
-					  	<textarea id="message" class="materialize-textarea"></textarea>
-					  	<label for="message">Message</label>
-					</div>
-				</div>
-			</form>
-			-->
 		</div>
 	</section>
 	<script type="text/javascript">
@@ -586,8 +366,7 @@
 			// fade in .navbar
 			$(function () {
 				$(window).scroll(function () {
-
-						 // set distance user needs to scroll before we start fadeIn
+					// set distance user needs to scroll before we start fadeIn
 					if ($(this).scrollTop() > 80) {
 						$('.navbar').fadeIn();
 					} else {
@@ -597,7 +376,7 @@
 			});
 
 			$('.home-container').hover(
-				function() { 
+				function() {
 					$(this).addClass('z-depth-3');
 				},
 				function() {
@@ -606,7 +385,7 @@
 			);
 
 			$('.card').hover(
-				function() { 
+				function() {
 					$(this).addClass('z-depth-3');
 				},
 				function() {
@@ -617,21 +396,15 @@
 
 		$(function() {
 	        $(window).on('resize', function() {
-	        	// Resize skills items
-	        	$("div.resize-tag").boxfit({
-        			maximum_font_size: 16, 
-        			minimum_font_size: 10
-        		});
-
         		// Resize card titles
 	        	$("div.card-main-title").boxfit({
 	        		align_middle: false,
 	        		align_center: false,
-        			maximum_font_size: 24, 
+        			maximum_font_size: 24,
         			minimum_font_size: 16
         		});
 	        });
-	        $(window).trigger('resize');    
+	        $(window).trigger('resize');
 	    });
 
 		$(function() {
