--- a/index.html
+++ b/index.html
@@ -23,37 +23,35 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
 	<!-- Compiled and minified CSS -->
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.1/css/materialize.min.css">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/css/materialize.min.css">
 	<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
 	<link rel="stylesheet" type="text/css" href="index.css">
 
 	<!-- Compiled and minified JavaScript -->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.1/js/materialize.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/js/materialize.min.js"></script>
 	<script type="text/javascript" src="jquery.boxfit.js"></script>
 </head>
 <body>
-	<div class="navbar">
-		<nav class="grey darken-4">
-			<a href="#!" class="brand-logo">Mohamed Moussa</a>
-			<ul class="right hide-on-med-and-down">
-				<li><a href="#s1">Home</a></li>
-				<li><a href="#s2">About</a></li>
-				<li><a href="#s3">Skills</a></li>
-				<li><a href="#s4">Projects</a></li>
-				<li><a href="#s5">Contact</a></li>
-			</ul>
-			<ul class="side-nav" id="slide-out">
-				<li><a href="#s1">Home</a></li>
-				<li><a href="#s2">About</a></li>
-				<li><a href="#s3">Skills</a></li>
-				<li><a href="#s4">Projects</a></li>
-				<li><a href="#s5">Contact</a></li>
-			</ul>
-			<a href="#" data-activates="slide-out" class="button-collapse"><i class="material-icons">menu</i></a>
-		</nav>
-	</div>
+	<nav class="grey darken-4">
+		<a href="#!" class="brand-logo">Mohamed Moussa</a>
+		<ul class="right hide-on-med-and-down">
+			<li><a href="#s1" onclick="$('.button-collapse').sideNav('hide');">Home</a></li>
+			<li><a href="#s2" onclick="$('.button-collapse').sideNav('hide');">About</a></li>
+			<li><a href="#s3" onclick="$('.button-collapse').sideNav('hide');">Skills</a></li>
+			<li><a href="#s4" onclick="$('.button-collapse').sideNav('hide');">Projects</a></li>
+			<li><a href="#s5" onclick="$('.button-collapse').sideNav('hide');">Contact</a></li>
+		</ul>
+		<ul class="side-nav" id="slide-out">
+			<li><a href="#s1" onclick="$('.button-collapse').sideNav('hide');">Home</a></li>
+			<li><a href="#s2" onclick="$('.button-collapse').sideNav('hide');">About</a></li>
+			<li><a href="#s3" onclick="$('.button-collapse').sideNav('hide');">Skills</a></li>
+			<li><a href="#s4" onclick="$('.button-collapse').sideNav('hide');">Projects</a></li>
+			<li><a href="#s5" onclick="$('.button-collapse').sideNav('hide');">Contact</a></li>
+		</ul>
+		<a href="#" data-activates="slide-out" class="button-collapse"><i class="material-icons">menu</i></a>
+	</nav>
 
 	<!-- Home -->
 	<section class="fill-page">
@@ -111,9 +109,10 @@
 					<img src="images/profile.jpg" class="me-img circle">
 				</div>
 			</div>
-			<div class="col s12 m7 l9">
+			<div id="quote-box" class="col s12 m7 l9">
 				<i class="fa fa-quote-left quote"></i>
-				<p class="quote-text">Yesterday I was clever, so I wanted to change the world. Today I am wise, so I am changing myself.</p><i class="fa fa-quote-right quote right"></i>
+				<p class="quote-text">Yesterday I was clever, so I wanted to change the world. Today I am wise, so I am changing myself.</p>
+				<i class="fa fa-quote-right quote right"></i>
 				<br><br>
 				<p class="quote-author right-align">- Rumi</p>
 			</div>
@@ -194,7 +193,7 @@
 					</div>
 					<div class="card-content">
 					    <span class="card-title activator grey-text text-darken-4"><div class="card-main-title">Iqra</div><i class="material-icons right top-right-more">more_vert</i></span>
-					    <p><a href="https://play.google.com/store/apps/details?id=com.mmmoussa.iqra">Android</a> | <a href="https://iqraapp.com">Web</a></p>
+					    <p><a href="https://play.google.com/store/apps/details?id=com.mmmoussa.iqra">Android</a> | <a href="https://iqraapp.com">iqraapp.com</a></p>
 					</div>
 					<div class="card-reveal">
 					    <span class="card-title grey-text text-darken-4">
@@ -361,16 +360,16 @@
 				closeOnClick: true
 			});
 			// hide .navbar first
-			$(".navbar").hide();
+			$("nav").hide();
 
 			// fade in .navbar
 			$(function () {
 				$(window).scroll(function () {
 					// set distance user needs to scroll before we start fadeIn
 					if ($(this).scrollTop() > 80) {
-						$('.navbar').fadeIn();
+						$('nav').slideDown();
 					} else {
-						$('.navbar').fadeOut();
+						$('nav').slideUp();
 					}
 				});
 			});
@@ -415,7 +414,7 @@
 					if (target.length) {
 						$('html,body').animate({
 							scrollTop: target.offset().top
-						}, 1300);
+						}, 1000);
 						return false;
 					}
 				}
